extras/local/argo-events/eventsource-codeberg.yaml
---
# Service for the EventSource webhook endpoint
apiVersion: v1
kind: Service
metadata:
  name: codeberg-eventsource-svc
  namespace: argo-events
  labels:
    eventsource-name: codeberg
spec:
  type: ClusterIP
  ports:
    - port: 12001
      targetPort: 12001
      protocol: TCP
      name: webhook
  selector:
    eventsource-name: codeberg
    owner-name: codeberg
