extras/local/argo-events/eventsource-forgejo.yaml
---
# Service for the EventSource webhook endpoint
# This is auto-created by Argo Events, but we define it explicitly
# for clarity and to ensure proper configuration
apiVersion: v1
kind: Service
metadata:
  name: forgejo-eventsource-svc
  namespace: argo-events
  labels:
    eventsource-name: forgejo
spec:
  type: ClusterIP
  ports:
    - port: 12000
      targetPort: 12000
      protocol: TCP
      name: webhook
  selector:
    eventsource-name: forgejo
    owner-name: forgejo
